--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ API_BASE_URL=http://localhost:3000
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:root@localhost:3306/api"
+
+JWT_TOKEN=nz673vRQv6*G4nWJeW^atCkEhF*3bV!&
