implementações rate limit, cors e outras configs de segurança

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ API_BASE_URL=http://localhost:3000
 DATABASE_URL="mysql://root:root@localhost:3306/api"
 
 JWT_TOKEN=nz673vRQv6*G4nWJeW^atCkEhF*3bV!&
+BCRYPT_SALT=10
